--- a/SPATIAL TEMPERATURE ANALYSIS.ipynb
+++ b/SPATIAL TEMPERATURE ANALYSIS.ipynb
@@ -2,58 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "3af4df15-8228-4088-ae04-e0f93711f0da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xarray as xr\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import cartopy.crs as ccrs\n",
-    "import numpy as np\n",
-    "from warnings import filterwarnings\n",
-    "filterwarnings('ignore')\n",
-    "import cartopy.feature as cfeature\n",
-    "from cartopy.mpl.gridliner import LONGITUDE_FORMATTER, LATITUDE_FORMATTER\n",
-    "import matplotlib.colors as mcolors\n",
-    "from matplotlib import colors  # Correct import"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "a680e585-c85b-430b-8e36-31c41fc9a5b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Tmax = xr.open_dataset('Ghana_ERA5_dTx_1991_2020.nc').mx2t \n",
-    "Tmin = xr.open_dataset('Ghana_ERA5_dTn_1991_2020.nc').mn2t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "790d34ac-1f77-4bd6-9a34-08ed4022df66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "dd3df69a-013d-4740-bf90-aff123e03939",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate mean over the time dimension (1991–2020)\n",
-    "Tmax_mean = Tmax.mean(dim='time')\n",
-    "Tmin_mean = Tmin.mean(dim='time')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "4598e4a4-06d7-4972-a275-9420435feae5",
    "metadata": {},
    "outputs": [],
@@ -71,12 +20,37 @@
     "from cartopy.feature import ShapelyFeature\n",
     "from cartopy.io import shapereader\n",
     "from warnings import filterwarnings\n",
-    "filterwarnings('ignore')"
+    "filterwarnings('ignore')\n",
+    "from cartopy import crs, feature\n",
+    "from cartopy.mpl.ticker import LongitudeFormatter, LatitudeFormatter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
+   "id": "799bdfad-1475-4259-aa16-87930a14bd16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tmax = xr.open_dataset('Ghana_ERA5_dTx_1991_2020.nc').mx2t \n",
+    "Tmin = xr.open_dataset('Ghana_ERA5_dTn_1991_2020.nc').mn2t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d06f88e5-540b-4d67-84f8-ec1dae72df51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate mean over the time dimension (1991–2020)\n",
+    "Tmax_mean = Tmax.mean(dim='time')\n",
+    "Tmin_mean = Tmin.mean(dim='time')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "c61b6411-0d2f-4583-8de4-0fee847a5e05",
    "metadata": {},
    "outputs": [
@@ -92,10 +66,6 @@
     }
    ],
    "source": [
-    "from cartopy import crs, feature\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from cartopy.mpl.ticker import LongitudeFormatter, LatitudeFormatter\n",
     "\n",
     "# Assuming Tmin_mean and Tmax_mean are defined and are 2D arrays with .longitude and .latitude attributes\n",
     "lon_formatter = LongitudeFormatter(zero_direction_label=True)\n",
